# SynergyMesh

./: .auto-fix-bot.yml  .codacy.yml  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  .replit  .yamllint.yml  AAPS_INTEGRATION_SUMMARY.md  AAPS_MARKETPLACE_INTEGRATION_PLAN.md  AAPS_UNIFIED_GATES_OPTIMIZATION.md  ACCEPTANCE_CHECKLIST.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  AUTOMATED_MEMORY_SYSTEM_COMPLETE.md  BUILD.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CI_ISSUES_FIX_REPORT.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  CODACY_ANALYSIS_REPORT.md  CODACY_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CONFIGURATION_TEMPLATES.md  CONTRIBUTING.md  CONTRIBUTION_GUIDE.md  CONVERSATION_LOG.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INTEGRATION_SUMMARY.md  DEPLOYMENT_MANIFEST.md  DEPLOYMENT_VALIDATION_REPORT.md  DIRECTORY.md  DOCUMENTATION_INDEX.md  Dockerfile  ENGINEER_CORE_FILES_GUIDE.md  (+124 more)
chatops/chatops-main/services/engine-python/: README.md  pyproject.toml
engine/config-manager/: pyproject.toml
engine/config-manager/src/config_manager/: __main__.py
engine/config-manager/src/config_manager.egg-info/: entry_points.txt
engine/machinenativenops-auto-monitor/: README.md  pyproject.toml  requirements.txt
engine/machinenativenops-auto-monitor/assets/: default_config.yaml
engine/machinenativenops-auto-monitor/src/machinenativenops_auto_monitor/: __init__.py  __main__.py  alerts.py  app.py  collectors.py  config.py  storage.py  儲存.py
workspace/src/governance/: .gitattributes  COMPREHENSIVE_SYSTEM_ANALYSIS.md  CRITICAL_CLARIFICATION_執行能力澄清.md  DIRECTORY.md  EXPANSION_COMPLETION_REPORT.md  INSTANT_DEBT_RESOLUTION_REPORT.md  INSTANT_EXECUTION_PROOF_即時執行證明.md  INSTANT_EXECUTION_README.md  Makefile  PHASE4_STATE.yaml  PR172_DEEP_ANALYSIS_AND_EVALUATION.md  PR172_評估摘要.md  README.md  RESTRUCTURING_BACKUP.md  RESTRUCTURING_GUIDE.md  RESTRUCTURING_SUMMARY.md  deploy-instant.sh  docker-compose.yml  fs.map  governance-index.json  governance-map.yaml  governance.yaml  pyproject.toml  requirements.txt  setup.py
workspace/src/governance/00-vision-strategy/: AUTONOMOUS_AGENT_STATE.md  DIRECTORY.md  INSTANT-EXECUTION-MANIFEST.yaml  PHASE2_README.md  PHASE3_README.md  PHASE4_README.md  PHASE5_README.md  PROJECT_STATE_SNAPSHOT.md  README.gac-deployment.md  README.md  alignment-framework.yaml  communication-plan.yaml  dimension.yaml  fs.map  gac-architecture.yaml  governance-charter.yaml  implementation-roadmap.yaml  risk-register.yaml  strategic-objectives.yaml  success-metrics-dashboard.yaml  vision-statement.yaml
workspace/src/governance/01-architecture/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  automation_engine.py  dimension.yaml  fs.map  governance-entities.yaml  governance-framework.yaml  governance-model.yaml  governance-principles.yaml  governance-standards.md  organizational-structure.yaml  roles-and-responsibilities.yaml
workspace/src/governance/02-decision/: DIRECTORY.md  __init__.py  automation_engine.py  decision-audit.yaml  decision-authority-matrix.yaml  decision-review-criteria.yaml  decision-tracking.yaml  dimension.yaml  fs.map
workspace/src/governance/03-change/: DIRECTORY.md  __init__.py  automation_engine.py  change-rollback-procedures.yaml  change-tracking.yaml  dimension.yaml  fs.map
workspace/src/governance/04-risk/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  automation_engine.py  dimension.yaml  fs.map  risk-classification.yaml  risk-maturity-model.yaml  risk-monitoring.yaml  risk-policy.yaml  risk-response-strategies.yaml
workspace/src/governance/05-compliance/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  automation_engine.py  compliance-audit-schedule.yaml  compliance-framework.yaml  compliance-policy.yaml  compliance-violations.yaml  dimension.yaml  fs.map
workspace/src/governance/06-security/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  automation_engine.py  dimension.yaml  fs.map  security-maturity-model.yaml  security-policy.yaml  vulnerability-management.yaml
workspace/src/governance/07-audit/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  append_only_log_client.py  audit-improvement-tracking.yaml  audit-policy.yaml  audit-workpapers.yaml  automation_engine.py  dimension.yaml  format.yaml  fs.map
workspace/src/governance/08-process/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  __init__.py  automation_engine.py  dimension.yaml  fs.map  process-automation-roadmap.yaml  process-improvement-procedures.yaml  process-metrics.yaml  process-optimization-framework.yaml  process-policy.yaml
workspace/src/governance/09-performance/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  automation_engine.py  dimension.yaml  fs.map  performance-assessment.yaml  performance-improvement-plan.yaml  performance-metrics.yaml  performance-policy.yaml  performance-reporting.yaml  performance-targets.yaml
workspace/src/governance/10-policy/: ARCHITECTURE.md  DIRECTORY.md  README.md  dimension.yaml  fs.map
workspace/src/governance/11-tools-systems/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  audit-management-system.yaml  automation_engine.py  compliance-management-system.yaml  data-integration-framework.yaml  dimension.yaml  fs.map  process-management-system.yaml  risk-management-system.yaml  tools-inventory.yaml
workspace/src/governance/12-culture-capability/: DIRECTORY.md  __init__.py  automation_engine.py  competency-framework.yaml  culture-metrics.yaml  culture-strategy.yaml  dimension.yaml  fs.map  maturity-assessment.yaml  training-program.yaml
workspace/src/governance/13-metrics-reporting/: AUTOMATION_ENGINE_README.md  DIRECTORY.md  README.md  __init__.py  automation_engine.py  dimension.yaml  fs.map  metrics-data-source.yaml  metrics-framework.yaml  multidimensional-metrics.yaml  report-templates.yaml  reporting-schedule.yaml
workspace/src/governance/14-improvement/: AUTOMATION_ENGINE_README.md  (+10 more)
(+7435 files in other folders)
