[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "config-manager"
version = "1.0.0"
description = "Configuration management and validation"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
config-manager = "config_manager.__main__:main"