[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synergymesh-governance"
dynamic = ["version"]
description = "SynergyMesh 23-Dimension Enterprise Governance Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SynergyMesh Governance Team", email = "governance-team@synergymesh.io"}
]
keywords = ["governance", "enterprise", "framework", "AI", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/SynergyMesh-admin/SynergyMesh"
Documentation = "https://synergymesh.readthedocs.io"
Repository = "https://github.com/SynergyMesh-admin/SynergyMesh"
Issues = "https://github.com/SynergyMesh-admin/SynergyMesh/issues"

[project.scripts]
governance-cli = "governance.cli:main"
governance-dashboard = "governance.dashboard:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
