[package]
name = "layer0-runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors = ["Unmanned Island Team"]
description = "Layer 0 (OS/Hardware) Runtime - Memory-safe system-level operations"
license = "MIT"

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
